scrollbar fixed

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,18 +1,24 @@
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Yeseva One", cursive;
-	font-size: 13px;
-	font-weight: 300;
-    overflow-x: hidden!important;
+    font-size: 13px;
+    font-weight: 300;
+    overflow-x: hidden !important;
 }
-a, button { transition: all 0.3s ease; }
+
+a,
+button {
+    transition: all 0.3s ease;
+}
+
 a:hover,
 a:focus {
-	text-decoration: none;
-	outline: none;
+    text-decoration: none;
+    outline: none;
 }
+
 .sample-text-area {
     background: $white;
     padding: 100px 0 70px 0;
@@ -27,9 +33,7 @@ b,
 sup,
 sub,
 u,
-del {
-    
-}
+del {}
 
 h1 {
     font-size: 36px;
@@ -63,16 +67,39 @@ h5,
 h6 {
     line-height: 1.2em;
 }
-.flex{
+
+.flex {
     display: flex;
-    
+
 }
-.align-items-center{
+
+.align-items-center {
     align-items: center;
 }
 
-.justify-content-center{
+.justify-content-center {
     justify-content: center;
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+    
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #555;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: #3CC78F;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #3CC78F;
 }
 
 /*----------------------------*\
@@ -89,4 +116,9 @@ h6 {
 .owl-theme .owl-nav [class*=owl-]:hover {
     background: none;
     color: #5c9320;
+}
+
+::selection {
+    color: white;
+    background: black;
 }
